--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -168,3 +168,13 @@ h3 {
 }
 
 /* Start coding here */
+@media only screen and (max-width: 600px){
+  .row-1,
+  .row-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+  
