--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -168,3 +168,15 @@ h3 {
 }
 
 /* Start coding here */
+
+@media only screen and (max-width: 600px) {
+  .row-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .row-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
